--- a/hfe/src/components/NavbarStyles.css
+++ b/hfe/src/components/NavbarStyles.css
@@ -1,124 +1,166 @@
-.NavbarItems{
-    display:flex;
-    justify-content: space-between;
-    align-items:center;
-    padding: 0 30px;
-    box-shadow: 0 5px 15px 0 rgba(0,0,0,25);
-    width: 95%;
-    height: 80px;
-    border-radius: 13px;
+.NavbarItems {
+  /* background-color: #222; */
+  background-color: #fff;
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
+  width: 95%;
+  height: 80px;
+  border-radius: 13px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 30px;
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  z-index: 9999;
+  transform: translate(-50%);
 }
 
 .navbar-logo {
-    color:black;
-    font-size: 2rem;
-    cursor: pointer;
+  color: #222;
+  font-size: 2rem;
+  justify-self: start;
+  cursor: pointer;
 }
 
-.nav-menu{
-    display: grid;
-    grid-template-columns: repeat(6, auto);
-    grid-gap: 10px;
-    list-style:none;
-    align-items:center; 
+.fa-react {
+  margin-left: 0.2rem;
+  font-size: 1.6rem;
 }
 
-.nav-links{
-    text-decoration: none;
-    color:black;
-    font-size: 1.2rem;
-    font-weight: 600;
-    padding:0.7rem 1rem;
-    white-space:nowrap;
+.nav-menu {
+  display: grid;
+  grid-template-columns: repeat(6, auto);
+  grid-gap: 10px;
+  list-style: none;
+  align-items: center;
+  text-align: center;
+  justify-content: end;
 }
 
-.nav-links i{
-    padding-right:10px
+.nav-links {
+  color: #222;
+  text-decoration: none;
+  padding: 0.7rem 1rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  white-space: nowrap;
 }
 
-.nav-links:hover{
-    background-color:#0f1111;
-    color:rgb(230, 233, 235);
-    border-radius:4px;
-    transition: all 0.2s ease-in-out
+.nav-links i {
+  padding-right: 10px;
 }
 
-.nav-links-mobile{
-    display: none;
+.nav-links:hover {
+  background-color: #01959a;
+  color: #fff;
+  border-radius: 4px;
+  transition: all 0.2s ease-in-out;
 }
 
-button{
-    padding: 0.5rem 1.6rem;
-    white-space: nowrap;
-    border-radius: 0.3rem;
-    font-size: 1rem;
-    font-weight: 800;
-    border: none;
-    cursor: pointer;
-    transition: 0.2s ease-in-out;
+button {
+  padding: 0.5rem 1rem;
+  white-space: nowrap;
+  border-radius: 0.3rem;
+  font-size: 1rem;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  transition: 0.2s ease-in-out;
 }
 
-button:hover{
-    background-color:#0f1111;
-    color:#fff;
+button:hover {
+  background-color: #151516;
+  color: #fff;
 }
 
-.menu-icons{
-    display: none;
+.fa-bars {
+  color: #222;
 }
-/* 竖屏 */
-@media screen and (max-width: 850px){
-    .NavbarItems{
-        z-index: 99;
-    }
-    .nav-menu {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        background:white;
-        width: 100%;
-        height: auto;
-        position:absolute;
-        top:0;
-        left:-100%;
-        opacity: 0;
-        align-items: stretch;
-        padding:80px 0 30px 0;
-        margin:0;
-        z-index: -1;
-    }
-    .nav-menu.active{
-        left:0;
-        opacity:1;
-        z-index: -1;
-    }
-    .nav-links{
-        display: block;
-        width:100%;
-        font-size: 2rem;
-        padding:2rem 0;
-    }
-    .nav-links:hover{
-        background:white;
-        transition: none;
-    }
+
+.nav-links-mobile {
+  display: none;
+}
+
+.menu-icons {
+  display: none;
+}
+
+@media screen and (max-width: 850px) {
+  .NavbarItems {
+    z-index: 99;
+  }
+  .nav-menu {
+    /* background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
     
-    button{
-        display:none;
+    border: 1px solid rgba(255, 255, 255, 0.18); */
+    background-color: #fff;
+    border-radius: 13px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0px;
+    left: -110%;
+    opacity: 1;
+    transition: all 0.3s ease;
+    align-items: stretch;
+    padding: 80px 0 30px 0;
+    margin: 0;
+  }
 
-    }
-    .nav-links-mobile{
-        display:block;
-        text-align:center;
-        padding:1.6rem;
-        margin:auto;
-        border-radius: 4px;
-        width:80%;
-        background: #01959a;
-        text-decoration: none;
-        color:#0f1111;
-        font-size: 1.2rem;
-        font-weight: 700;
-        letter-spacing: 2px;
-    }
+  .nav-menu.active {
+    left: 0;
+    opacity: 1;
+    transition: all 0.3s ease;
+    z-index: -1;
+  }
+
+  .nav-links {
+    display: block;
+    width: 100%;
+    font-size: 1.2rem;
+    padding: 2rem 0;
+  }
+
+  .nav-links:hover {
+    background: #01959a;
+    transition: none;
+  }
+
+  .menu-icons {
+    display: block;
+    position: absolute;
+    top: 25px;
+    right: 30px;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    padding: 1.5rem;
+    margin: auto;
+    border-radius: 4px;
+    width: 80%;
+    background: #01959a;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 700;
+    letter-spacing: 2px;
+    font-size: 1.2rem;
+  }
+  .fa-times {
+    color: #222;
+  }
+
+  button {
+    display: none;
+  }
 }
