--- a/hfe/src/components/HomeHeroStyles.css
+++ b/hfe/src/components/HomeHeroStyles.css
@@ -3,6 +3,7 @@
   height: 100vh;
   position: relative;
 }
+
 .hero-mid {
   width: 100%;
   height: 70vh;
@@ -41,15 +42,28 @@ img {
   padding: 0.5rem 0 2rem 0;
 }
 
-.hero-text .show {
+.hero-text b {
   text-decoration: none;
-  background: #fff;
+  background:rgb(48,111,213 );
   padding: 1rem 2rem;
   border-radius: 6px;
   font-size: 1.1rem;
   font-weight: bold;
   letter-spacing: 2px;
-  color: #222;
+  color: rgb(246,196,74 );
+  margin-right: 1rem; /* Add space between the two buttons */
+}
+
+.hero-text a {
+  text-decoration: none;
+  background: rgb(117,34,123 );
+  padding: 1rem 2rem;
+  border-radius: 6px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  letter-spacing: 2px;
+  color: rgb(255,255,255);
+  margin-right: 1rem; /* Add space between the two buttons */
 }
 
 .hero-text .hide {
@@ -60,11 +74,13 @@ img {
   .hero-text h1 {
     padding: 10px 20px;
   }
+  
   .hero-text p {
     font-size: 1.1rem;
     padding: 0rem 0 2rem 0;
   }
-  .hero-text .show {
+  
+  .hero-text a {
     padding: 0.6rem 1.1rem;
     border-radius: 3px;
     font-size: 1rem;
