--- a/hfe/src/components/NavbarStyles.css
+++ b/hfe/src/components/NavbarStyles.css
@@ -30,7 +30,7 @@
 
 .nav-menu {
   display: grid;
-  grid-template-columns: repeat(6, auto);
+  grid-template-columns: repeat(7, auto);
   grid-gap: 10px;
   list-style: none;
   align-items: center;
@@ -52,7 +52,7 @@
 }
 
 .nav-links:hover {
-  background-color: #01959a;
+  background-color: black;
   color: #fff;
   border-radius: 4px;
   transition: all 0.2s ease-in-out;
@@ -91,12 +91,7 @@ button:hover {
     z-index: 99;
   }
   .nav-menu {
-    /* background: rgba(255, 255, 255, 0.25);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
     
-    border: 1px solid rgba(255, 255, 255, 0.18); */
     background-color: #fff;
     border-radius: 13px;
     display: flex;
@@ -149,7 +144,7 @@ button:hover {
     margin: auto;
     border-radius: 4px;
     width: 80%;
-    background: #01959a;
+    background: black;
     text-decoration: none;
     color: #fff;
     font-weight: 700;
